[package]
name = "UnitSystem"
version = "0.1.0"
edition = "2021"

[[authors]]
name = "Ali Bagheri"
email = "a6bagher@uwaterloo.ca"

[[authors]]
name = "Kamran Maksimov"
email = "kmaximoff@hotmail.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
